--- a/trikaay/package.json
+++ b/trikaay/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
   },
