--- a/trikaay/package.json
+++ b/trikaay/package.json
@@ -13,13 +13,18 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.2",
+    "@next/third-parties": "^15.4.4",
     "@radix-ui/react-slot": "^1.2.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
+    "next-seo": "^6.8.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-datepicker": "^8.4.0",
