--- a/trikaay/package.json
+++ b/trikaay/package.json
@@ -29,6 +29,7 @@
     "react-countup": "^6.5.3",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-tailwindcss-datepicker": "^2.0.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1"
